// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword Form Should render the ForgotPassword form filled and press submit 1`] = `
<DocumentFragment>
  <form
    class="sc-eCssSg jvctCF"
    data-testid="forgot-password-form"
  >
    <div
      class="sc-bdfBwQ cgTScR"
    >
      <div
        class="MuiFormControl-root MuiTextField-root sc-gsTCUz jKtOdX"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
        >
          Email
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            data-testid="input-Email"
            maxlength="255"
            name="email"
            rows="3"
            type="email"
            value="johndoe@gmail.com"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-7 PrivateNotchedOutline-legendNotched-8"
            >
              <span>
                Email
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="sc-jSgupP evxpKV"
    >
      <button
        class="sc-hKgILt bytOKm"
        data-testid="button"
        type="submit"
      >
        Reset my password
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ForgotPassword Form Should render the ForgotPassword form filled with wrong fields 1`] = `
<DocumentFragment>
  <form
    class="sc-eCssSg jvctCF"
    data-testid="forgot-password-form"
  >
    <div
      class="sc-bdfBwQ cgTScR"
    >
      <div
        class="MuiFormControl-root MuiTextField-root sc-gsTCUz jKtOdX"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled"
          data-shrink="true"
        >
          Email
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
        >
          <input
            aria-invalid="true"
            class="MuiInputBase-input MuiOutlinedInput-input"
            data-testid="input-Email"
            maxlength="255"
            name="email"
            rows="3"
            type="email"
            value="johndoegmail.com"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-11 PrivateNotchedOutline-legendNotched-12"
            >
              <span>
                Email
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <div
        class="sc-dlfnbm bOmIgN"
        data-testid="error-block"
      >
        Invalid email address
      </div>
    </div>
    <div
      class="sc-jSgupP evxpKV"
    >
      <button
        class="sc-hKgILt bytOKm"
        data-testid="button"
        type="submit"
      >
        Reset my password
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ForgotPassword Form Should render the forgot password form empty 1`] = `
<DocumentFragment>
  <form
    class="sc-eCssSg jvctCF"
    data-testid="forgot-password-form"
  >
    <div
      class="sc-bdfBwQ cgTScR"
    >
      <div
        class="MuiFormControl-root MuiTextField-root sc-gsTCUz jKtOdX"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Email
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            data-testid="input-Email"
            maxlength="255"
            name="email"
            rows="3"
            type="email"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-3"
            >
              <span>
                Email
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="sc-jSgupP evxpKV"
    >
      <button
        class="sc-hKgILt bytOKm"
        data-testid="button"
        type="submit"
      >
        Reset my password
      </button>
    </div>
  </form>
</DocumentFragment>
`;
